install(FILES clamp.cal	disk2square.cal	gensky-s.fmt	mat3.cal printwarp.cal	sf.cal tregenza.cal vwparab.cal clouds.cal	errfile.fmt	graypatch.cal	metals.cal	quadratic.cal	spharm.cal	tregsrc.cal	vwplanis.cal
bezier2.cal	cmat.fmt	ferwerda.cal	hermite.cal	noise.cal	reinhard.cal	sphsamp.cal	trix.dat	xyz_rgb.cal
blackbody.cal	color.fmt	filt.cal	illum.fmt	noise2.cal	reinhard.csh	spline.cal	triy.dat	xyz_srgb.cal
blinds.cal	colorcal.csh	fitSH.cal	illumcal.csh	noise3.cal	reinhart.cal	stdrefl.cal	triz.dat
cct.cal		conv1.cal	fog.cal	klems_ang.cal	norm.cal	rgb.cal	sun.cal	tumblin.cal
cielab.cal	conv2.cal	gauss.cal	klems_int.cal	normcomp.cal	rgb_ycc.cal	suncal.fmt	veil.cal
cieluv.cal	cri.cal		gaussian.cal	landscape.cal	patch3w.cal	root.cal	testimg.cal	view.fmt
cieresp.cal	cubic.cal	genSH.cal	lumdist.cal	peerless.cal	rskysrc.cal	trans.cal	vl.cal
circle.cal	denom.cal	gensky+s.fmt	macbeth.cal	picdiff.cal	screen.cal	trans2.cal	vonKries.cal
  DESTINATION lib)
